# lucrezio_semantic_explorer

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml
launch/: exploration.launch  gmapping.launch  localization.launch  move_base.launch  move_base_no_map.launch
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rviz/: lucrezio.rviz  lucrezio_gmapping.rviz  lucrezio_move_base.rviz
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  frontier_detector_app.cpp
src/examples/: lucrezio_explorer.cpp  lucrezio_explorer.h  lucrezio_explorer_node.cpp
src/frontier_detector/: CMakeLists.txt  frontier_detector.cpp  frontier_detector.h
src/lucrezio_explorer/: CMakeLists.txt  lucrezio_explorer.cpp  lucrezio_explorer.h
src/nodes/: CMakeLists.txt  explorer_node.cpp  lucrezio_explorer_node.cpp  lucrezio_semantic_explorer_node.cpp  semantic_explorer_node.cpp
src/semantic_explorer/: semantic_explorer.cpp  semantic_explorer.cpp.autosave  semantic_explorer.h
